--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-*, *::after, *::before {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -9,13 +11,14 @@ html {
   font-size: 62.5%;
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
 :root {
-  --color-primary: #007BFF;
-  --color-primary-light: #2680D9;
+  --color-primary: #007bff;
+  --color-primary-light: #2680d9;
 }
 
 body {
@@ -33,7 +36,8 @@ body {
   gap: 1rem;
 }
 
-.header h1, .header p {
+.header h1,
+.header p {
   color: #fff;
   text-align: center;
 }
